name:            andromeda
version:         0.0.0.1
author:          Daniel Mendler
maintainer:      mail@daniel-mendler.de
category:        Language
build-type:      Simple
cabal-version:   >=1.8

executable andromeda
  ghc-options:   -Wall
  main-is:       Andromeda/Main.hs
  build-depends: base,
                 parsec,
                 mtl,
                 text,
                 pretty,
                 haskeline,
                 optparse-applicative
